Fix unwanted scrollbars on windows

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -104,7 +104,7 @@
         @apply bg-slate-200 dark:bg-slate-800 rounded-xl border-l-4 border-slate-400 dark:border-slate-500 p-6;
     }
     pre {
-        @apply bg-slate-800 rounded-xl text-sm text-[#b5c4f2] p-4 overflow-x-scroll;
+        @apply bg-slate-800 rounded-xl text-sm text-[#b5c4f2] p-4 overflow-x-auto;
     }
     pre > code {
         @apply bg-slate-800;
